[package]
name = "indradb-lib"
version = "0.21.0"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
description = "A graph database library"
homepage = "https://indradb.github.io"
repository = "https://github.com/indradb/indradb"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]
license = "MPL-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "indradb/indradb", branch = "master" }

[lib]
name = "indradb"
path = "src/lib.rs"

[features]
default = []
test-suite = []
bench-suite = []

[dependencies]
failure = "0.1.5"
serde_json = "^1.0.38"
lazy_static = "^1.2.0"
rand = "~0.6.5"
regex = "^1.1.0"
uuid = { version = "~0.7.2", features = ["v4", "wasm-bindgen"] }

[dependencies.chrono]
version = "0.4.6"
default-features = false
features = ["clock"]
